# axolotl-pgn

./: .clang-format  .clang-tidy  .gitignore  .readthedocs.yaml  CMakeLists.txt  Dockerfile.fuzz  README.md  mkdocs.docs.yml  mkdocs.reports.yml
.github/workflows/: docs.yml  lint.yml  test.yml  tests.yml
docs/: index.md  requirements.txt  usage.md
fuzz/: main.c
scripts/: fuzz.sh
src/: main.c
src/common/: io.c  io.h  satoi.c  satoi.h  scan_ssv.c  scan_ssv.h  smalloc.c  smalloc.h  symbol.c  tsv.c  tsv.h
src/pgn/: gameclock.c  generation.c  generation.h  pgn.c  pgn.lex.l  pgn.syntax.y  pgn_frontend.c  pgn_frontend.h  pgn_move.c  pgn_tag.c  tagspec.c  tagspec.h
tagspecs/: lichess.tagspec
tests/: test_helpers.c  test_helpers.h
tests/common/: test_satoi.c  test_scan_ssv.c  test_tsv.c
tests/pgn/: test_gameclock.c  test_pgn.c  test_pgn_frontend.c  test_pgn_move.c  test_pgn_tag.c  test_symbol.c  test_tagspec.c
